--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,4 +1,67 @@
 <section data-ng-controller="HomeController">
+	<div class="jumbotron">
+		<div class="row">
+			<div class="col-md-6">
+				<img class="img-responsive text-center" src="modules/core/img/Head_Profile.JPG" />
+			</div>
+			<div class="col-md-6">
+				<ul class="list-group content-list">
+			    <li class="list-group-item content-item">Me</li>
+			    <li class="list-group-item content-item">Coffee Drinker</li>
+			    <li class="list-group-item content-item">Scribble Maker</li>
+					<li class="list-group-item content-item">Time Killer</li>
+					<div class="row">
+						<div class="col-md-3">
+							<a class="btn btn-social-icon btn-facebook">
+								<i class="fa fa-facebook"></i>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a class="btn btn-social-icon btn-twitter">
+								<i class="fa fa-twitter"></i>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a class="btn btn-social-icon btn-linkedin">
+								<i class="fa fa-linkedin"></i>
+							</a>
+						</div>
+						<div class="col-md-3">
+							<a class="btn btn-social-icon btn-github">
+								<i class="fa fa-github"></i>
+							</a>
+						</div>
+					</div>
+			  </ul>
+			</div>
+			<!-- <div class="col-md-6">
+				<div class="row">
+					<div class="col-md-3">
+						<a class="btn btn-social-icon btn-lg btn-facebook">
+							<i class="fa fa-facebook"></i>
+						</a>
+					</div>
+					<div class="col-md-3">
+						<a class="btn btn-social-icon btn-lg btn-twitter">
+							<i class="fa fa-twitter"></i>
+						</a>
+					</div>
+					<div class="col-md-3">
+						<a class="btn btn-social-icon btn-lg btn-linkedin">
+							<i class="fa fa-linkedin"></i>
+						</a>
+					</div>
+					<div class="col-md-3">
+						<a class="btn btn-social-icon btn-lg btn-github">
+							<i class="fa fa-github"></i>
+						</a>
+					</div>
+				</div>
+			</div> -->
+		</div>
+	</div>
+
+	</div>
 	<div class="jumbotron text-center">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
