--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1,3 +1,27 @@
+.navbar{
+	background: white;
+	border: none;
+}
+li.content-item{
+	background-color: transparent;
+	color: #87CEFA;
+	border-radius: 4px;
+	border: 1px solid #87CEFA;
+	margin-top: 5px;
+}
+li:hover{
+	background-color: white;
+}
+a.btn-social-icon{
+	margin-top: 20px;
+	width:100%;
+}
+.navbar-inverse .navbar-brand {
+  color: #87CEFA;
+}
+.navbar-inverse .navbar-nav > li > a {
+  color: #87CEFA;
+}
 .content {
 	margin-top: 50px;
 }
