--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1,17 +1,4 @@
-.navbar{
-	background: white;
-	border: none;
-}
-li.content-item{
-	background-color: transparent;
-	color: #87CEFA;
-	border-radius: 4px;
-	border: 1px solid #87CEFA;
-	margin-top: 5px;
-}
-li:hover{
-	background-color: white;
-}
+
 a.btn-social-icon{
 	margin-top: 20px;
 	width:100%;
@@ -36,4 +23,61 @@ a.btn-social-icon{
 }
 .ng-valid.ng-dirty {
 	border-color: #78FA89;
+}
+
+/* header */
+.navbar{
+	background: white;
+	border: none;
+}
+
+.site-header {
+	padding: 130px;
+	height: 200px;
+}
+
+.header-pic {
+	margin: auto;
+	width: 430px;
+	height: 200px;
+}
+
+.site-nav-bar {
+	margin-top: 60px;
+}
+
+li.nav-item{
+	width: 19%;
+	margin-left: 1%;
+	text-align: center;
+	position: relative;
+	display: block;
+	padding: 15px 15px;
+	background-color: transparent;
+	color: #87CEFA;
+	border-radius: 4px;
+	border: 1px solid #87CEFA;
+
+}
+
+@media screen and (max-width : 991px){
+	li.nav-item{
+		height: 72px;
+	}
+	.nav-item > span{
+		display: inline-block;
+		margin-top: 10px;
+	}
+}
+li.nav-item:hover{
+	background-color: #efefef;
+}
+
+
+
+/*overwrite*/
+@media screen and (min-width: 768px){
+	.navbar-nav {
+	    float: none;
+	}
 }
