--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -1,4 +1,7 @@
-<div class="container" data-ng-controller="HeaderController">
+<div class="container site-header" data-ng-controller="HeaderController">
+	<div>
+		<img class="img-responsive text-center header-pic" src="modules/core/img/Head_Profile.JPG" />
+	</div>
 	<div class="navbar-header">
 		<button class="navbar-toggle" type="button" data-ng-click="toggleCollapsibleMenu()">
 			<span class="sr-only">Toggle navigation</span>
@@ -6,10 +9,10 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a href="/#!/" class="navbar-brand">B V</a>
+		<!-- <a href="/#!/" class="navbar-brand">B V</a> -->
 	</div>
-	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
-		<ul class="nav navbar-nav" data-ng-if="menu.shouldRender(authentication.user);">
+	<nav class="collapse navbar-collapse site-nav-bar" collapse="!isCollapsed" role="navigation">
+		<!-- <ul class="nav navbar-nav" data-ng-if="menu.shouldRender(authentication.user);">
 			<li data-ng-repeat="item in menu.items | orderBy: 'position'" data-ng-if="item.shouldRender(authentication.user);" ng-switch="item.menuItemType" ui-route="{{item.uiRoute}}" class="{{item.menuItemClass}}" ng-class="{active: ($uiRoute)}" dropdown="item.menuItemType === 'dropdown'">
 				<a ng-switch-when="dropdown" class="dropdown-toggle">
 					<span data-ng-bind="item.title"></span>
@@ -22,14 +25,25 @@
 				</ul>
 				<a ng-switch-default href="/#!/{{item.link}}" data-ng-bind="item.title"></a>
 			</li>
-		</ul>
-		<ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">
-			<li ui-route="/signup" ng-class="{active: $uiRoute}">
-				<a href="/#!/signup">Sign Up</a>
+		</ul> -->
+		<ul class="nav navbar-nav" data-ng-hide="authentication.user">
+			<li class="nav-item">
+				<span>Me</span>
 			</li>
-			<li class="divider-vertical"></li>
-			<li ui-route="/signin" ng-class="{active: $uiRoute}">
-				<a href="/#!/signin">Sign In</a>
+			<li class="nav-item">
+				Coffee Drinker
+			</li>
+			<li class="nav-item">
+				Scribble Maker
+			</li>
+			<li class="nav-item">
+				Time Killer
+			</li>
+			<!-- <li ui-route="/signup" ng-class="{active: $uiRoute}">
+				<a href="/#!/signup">Sign Up</a>
+			</li> -->
+			<li class="nav-item" ui-route="/signin" ng-class="{active: $uiRoute}">
+				<span>Sign In</span>
 			</li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
