--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="HomeController">
-	<div class="jumbotron">
+	<!-- <div class="jumbotron">
 		<div class="row">
 			<div class="col-md-6">
 				<img class="img-responsive text-center" src="modules/core/img/Head_Profile.JPG" />
@@ -34,30 +34,6 @@
 					</div>
 			  </ul>
 			</div>
-			<!-- <div class="col-md-6">
-				<div class="row">
-					<div class="col-md-3">
-						<a class="btn btn-social-icon btn-lg btn-facebook">
-							<i class="fa fa-facebook"></i>
-						</a>
-					</div>
-					<div class="col-md-3">
-						<a class="btn btn-social-icon btn-lg btn-twitter">
-							<i class="fa fa-twitter"></i>
-						</a>
-					</div>
-					<div class="col-md-3">
-						<a class="btn btn-social-icon btn-lg btn-linkedin">
-							<i class="fa fa-linkedin"></i>
-						</a>
-					</div>
-					<div class="col-md-3">
-						<a class="btn btn-social-icon btn-lg btn-github">
-							<i class="fa fa-github"></i>
-						</a>
-					</div>
-				</div>
-			</div> -->
 		</div>
 	</div>
 
@@ -153,5 +129,5 @@
 		</p>
 	</div>
 	<br>Enjoy &amp; Keep Us Updated,
-	<br>The MEAN.JS Team.
+	<br>The MEAN.JS Team. -->
 </section>
