--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,4 +1,10 @@
 <section data-ng-controller="HomeController">
+	<div class="jumbotron big-sign">
+		<div class="row sign-text">
+			Hi, I'm BV!<br><br>
+			I like making creative things and meeting new people.
+		</div>
+	</div>
 	<!-- <div class="jumbotron">
 		<div class="row">
 			<div class="col-md-6">
