--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -14,7 +14,7 @@
 	<nav class="collapse navbar-collapse site-nav-bar" collapse="!isCollapsed" role="navigation">
 		<!-- <ul class="nav navbar-nav" data-ng-if="menu.shouldRender(authentication.user);">
 			<li data-ng-repeat="item in menu.items | orderBy: 'position'" data-ng-if="item.shouldRender(authentication.user);" ng-switch="item.menuItemType" ui-route="{{item.uiRoute}}" class="{{item.menuItemClass}}" ng-class="{active: ($uiRoute)}" dropdown="item.menuItemType === 'dropdown'">
-				<a ng-switch-when="dropdown" class="dropdown-toggle">
+				<a ng-switch-when="dropdown" class="drxopdown-toggle">
 					<span data-ng-bind="item.title"></span>
 					<b class="caret"></b>
 				</a>
@@ -27,7 +27,7 @@
 			</li>
 		</ul> -->
 		<ul class="nav navbar-nav" data-ng-hide="authentication.user">
-			<li class="nav-item">
+			<li class="nav-item" ui-sref="home" ng-class="{itemIsActive: state.includes('home')}">
 				<span>Me</span>
 			</li>
 			<li class="nav-item">
@@ -39,7 +39,7 @@
 			<li class="nav-item">
 				Time Killer
 			</li>
-			<!-- <li ui-route="/signup" ng-class="{active: $uiRoute}">
+			<!-- <li ui-route="/signup" ng-class="{active: true}" ng-click="test()">
 				<a href="/#!/signup">Sign Up</a>
 			</li> -->
 			<li class="nav-item" ui-route="/signin" ng-class="{active: $uiRoute}">
