--- a/public/modules/articles/views/articles.client.view.html
+++ b/public/modules/articles/views/articles.client.view.html
@@ -1,18 +1,15 @@
 <meta name="viewport" content="width=device-width" />
 <section data-ng-controller="ArticlesController">
 	<div class="articles-gallery">
-		<carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
-			 <slide ng-repeat="slide in slides track by slide.id" index="slide.id">
-				 <img class="book-cover" ng-src="{{slide.image}}">
+		<uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
+			 <uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id" ui-sref={{slide.sref}}>
+				 <img  class="book-cover" ng-src="{{slide.image}}">
 				 <div class="carousel-caption">
-					 <h1 class='book-title'>{{slide.text}}</h1>
-				   <br>
-					 <br>
-					 <br>
-					 <br>
+					 <h3 class='book-title'>{{slide.text}}</h3>
+
 					 <p class='book-description'>{{slide.description}}</p>
 				 </div>
-			 </slide>
-		 </carousel>
+			 </uib-slide>
+		 </uib-carousel>
  	</div>
 </section>
