--- a/public/modules/articles/css/articles.css
+++ b/public/modules/articles/css/articles.css
@@ -1,41 +1,48 @@
-.articles-gallery{
-  margin: auto;
-  width: 70%;
+.content-list {
+  padding: 30px;
+  width:100%;
+  height: 800px;
+  background: white;
+}
+
+.books-list {
+  padding: 20px;
   height: auto;
-  margin-top: 30px;
+  background: white;
 }
 
-.book-cover{
-  width: 100%;
-  margin: auto;
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
+.booksList-frame {
+  border-radius: none;
+  box-shadow: none;
 }
 
-
-
-.book-description{
-  /*text-align: left;*/
+.book-item {
+  border-style: none;
+  font-size: 1.5em;
 }
 
-
-/*@media only screen and (max-width: 480px) {
-  .book-title{
-    font-size: 1.3em;
-  }
-  .book-description{
-    font-size: 0.6em;
-  }
+.articles-list {
+  padding: 10px;
+  height: inherit;
+  background: white;
 }
 
-@media only screen and (max-width: 990px){
-  .book-title{
-    font-size: 1.3em;
-  }
-  .book-description{
-    font-size: 0.6em;
-  }*/
+span.article-title {
+  font-size: 1.1em;
+  font-weight: bold;
+  color: #87CEFA;
+}
+
+span.article-author {
+  font-size: 0.9em;
+  font-weight: bold;
+  color: #87CEFA;
+}
+
+span.article-date {
+  margin-top: 2px;
+  float: right;
+  font-size: 0.9em;
+  font-weight: bold;
+  color: #87CEFA;
 }
