--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -57,12 +57,15 @@
 	</script>
 
 	<!--Application JavaScript Files-->
-	{% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %} 
+	{% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
 
 	{% if process.env.NODE_ENV === 'development' %}
 	<!--Livereload script rendered -->
 	<script type="text/javascript" src="http://{{request.hostname}}:35729/livereload.js"></script>
 	{% endif %}
+
+
+<footer data-ng-include="'/modules/core/views/footer.client.view.html'"></footer>
 </body>
 
 </html>
