--- a/public/modules/core/views/footer.client.view.html
+++ b/public/modules/core/views/footer.client.view.html
@@ -1,9 +1,9 @@
 <div class="container" data-ng-controller="FooterController">
   <div class="social-bar">
-    <a class="btn btn-social-icon btn-xs btn-facebook"><span class="fa fa-facebook"></span></a>
-    <a class="btn btn-social-icon btn-xs btn-twitter"><span class="fa fa-twitter"></span></a>
-    <a class="btn btn-social-icon btn-xs btn-linkedin"><span class="fa fa-linkedin"></span></a>
-    <a class="btn btn-social-icon btn-xs btn-github"><span class="fa fa-github"></span></a>
-    <a class="btn btn-social-icon btn-xs btn-instagram"><span class="fa fa-instagram"></span></a>
+    <a href="https://www.facebook.com/bv.jin.5" target="_blank" class="btn btn-social-icon btn-xs btn-facebook"><span class="fa fa-facebook"></span></a>
+    <a href="https://twitter.com/BVhasBeUsed" target="_blank" class="btn btn-social-icon btn-xs btn-twitter"><span class="fa fa-twitter"></span></a>
+    <a href="https://www.linkedin.com/in/sanchuan-jin-90881890?trk=hp-identity-name" target="_blank" class="btn btn-social-icon btn-xs btn-linkedin"><span class="fa fa-linkedin"></span></a>
+    <a href="https://github.com/BVJin" target="_blank" class="btn btn-social-icon btn-xs btn-github"><span class="fa fa-github"></span></a>
+    <a href="https://www.instagram.com/cooldingbv/" target="_blank" class="btn btn-social-icon btn-xs btn-instagram"><span class="fa fa-instagram"></span></a>
   </div>
 </div>
