--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -42,7 +42,7 @@
 			<!-- <li ui-route="/signup" ng-class="{active: true}" ng-click="test()">
 				<a href="/#!/signup">Sign Up</a>
 			</li> -->
-			<li class="nav-item" ui-route="/signin" ng-class="{active: $uiRoute}">
+			<li class="nav-item" ui-sref="signin" ng-class="{active: $uiRoute}">
 				<span>Sign In</span>
 			</li>
 		</ul>
