--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -26,7 +26,7 @@
 				<a ng-switch-default href="/#!/{{item.link}}" data-ng-bind="item.title"></a>
 			</li>
 		</ul> -->
-		<ul class="nav navbar-nav" data-ng-hide="authentication.user">
+		<ul class="nav navbar-nav">
 			<li class="nav-item" ui-sref="home" ng-class="{itemIsActive: state.includes('home')}">
 				<span>Me</span>
 			</li>
@@ -42,11 +42,34 @@
 			<!-- <li ui-route="/signup" ng-class="{active: true}" ng-click="test()">
 				<a href="/#!/signup">Sign Up</a>
 			</li> -->
-			<li class="nav-item" ui-sref="signin" ng-class="{active: $uiRoute}">
+			<li class="nav-item" ui-sref="signin" ng-class="{itemIsActive: state.includes('signin')}" data-ng-show="!authentication.user">
 				<span>Sign In</span>
 			</li>
+			<li class="nav-item" ng-class="{itemIsActive: state.includes('profile') || state.includes('password') || state.includes('blog')}" data-ng-show="authentication.user">
+				<span class="menu-dropdown" uib-dropdown>
+					<span uib-dropdown-toggle>{{authentication.user.displayName}} &#8609;</span>
+					<ul class="dropdown-menu dropdown-custom" uib-dropdown-menu aria-labelledby="simply-dropdown">
+						<li>
+							<a href="/#!/settings/profile">Edit Profile</a>
+						</li>
+						<!-- <li>
+							<a href="/#!/settings/accounts">Manage Social Accounts</a>
+						</li> -->
+						<li data-ng-show="authentication.user.provider === 'local'">
+							<a href="/#!/settings/password">Change Password</a>
+						</li>
+						<li data-ng-show="authentication.user.roles.indexOf('admin') > -1">
+							<a href="/#!/blog">Blog System</a>
+						</li>
+						<li class="divider"></li>
+						<li>
+							<a href="/auth/signout">Signout</a>
+						</li>
+					</ul>
+				</span>
+			</li>
 		</ul>
-		<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
+		<!-- <ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 					<span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
@@ -67,6 +90,6 @@
 					</li>
 				</ul>
 			</li>
-		</ul>
+		</ul> -->
 	</nav>
 </div>
