--- a/public/modules/blog/views/blog.client.view.html
+++ b/public/modules/blog/views/blog.client.view.html
@@ -1,5 +1,7 @@
 <section data-ng-controller="BlogController">
 	<div><strong>Welcome back, my master ! :D</strong></div>
+
+	<!-- Editor -->
 	<div class="editor-wrapper" ng-show="!ifPreview" >
 		<div>
 			<span id="titleWarning" >Title:</span>
@@ -11,7 +13,14 @@
 			<div text-angular ng-model="articleObj.content"></div>
 		</div>
 	</div>
-	<div ng-show="ifPreview" ng-bind-html="articleObj.content"></div>
+
+	<!-- Preview -->
+	<div ng-show="ifPreview" class="editor-wrapper">
+		<div class="preview-title" ng-bind-html="articleObj.title"></div>
+		<div ng-bind-html="articleObj.content"></div>
+	</div>
+
+	<!-- bottom buttons -->
 	<div class="bottom-btns">
 		<button type="button" class='btn btn-default' ng-click="articleObj.title?submitArticle(): noTitle()">Submit</button>
 		&nbsp;&nbsp;
