--- a/public/modules/blog/views/blog.client.view.html
+++ b/public/modules/blog/views/blog.client.view.html
@@ -20,6 +20,26 @@
 		<div ng-bind-html="articleObj.content"></div>
 	</div>
 
+	<!-- Select book -->
+	<div class="books-dropdown-wrapper">
+		<span class="pull-left">Select a book: &nbsp;</span>
+		<select class="pull-left col-xs-12 col-md-2"
+						ng-model="userCountryName"
+						ng-options="country for country in countries track by country"
+						ng-change="loadScheduleOfCountry(userCountryName)">
+	  </select>
+
+		<button uib-popover-template="'myPopoverTemplate.html'" popover-title="lalala" type="button" class="btn btn-default">Popover With Template</button>
+
+	 	<script type="text/ng-template" id="myPopoverTemplate.html">
+			 	<div>jajaj</div>
+			 	<div class="form-group">
+				 	<label>Popup Title:</label>
+				 	<input type="text" ng-model="dynamicPopover.title" class="form-control">
+			 	</div>
+	 	</script>
+	</div>
+
 	<!-- bottom buttons -->
 	<div class="bottom-btns">
 		<button type="button" class='btn btn-default' ng-click="articleObj.title?submitArticle(): noTitle()">Submit</button>
