--- a/public/modules/blog/views/blog.client.view.html
+++ b/public/modules/blog/views/blog.client.view.html
@@ -29,13 +29,17 @@
 						ng-change="loadScheduleOfCountry(userCountryName)">
 	  </select>
 
-		<button uib-popover-template="'myPopoverTemplate.html'" popover-title="lalala" type="button" class="btn btn-default">Popover With Template</button>
+		<!-- Create book -->
+		&nbsp;
+		<button uib-popover-template="'myPopoverTemplate.html'" popover-title=" :D " type="button" class="bv-btn blog-btn">Create a book</button>
 
 	 	<script type="text/ng-template" id="myPopoverTemplate.html">
-			 	<div>jajaj</div>
 			 	<div class="form-group">
-				 	<label>Popup Title:</label>
+				 	<label>Book Name:</label>
 				 	<input type="text" ng-model="dynamicPopover.title" class="form-control">
+					<div class="">
+						<span class="bv-btn popover-create-btn">Create</span>
+					</div>
 			 	</div>
 	 	</script>
 	</div>
