--- a/public/modules/articles/css/articles.css
+++ b/public/modules/articles/css/articles.css
@@ -21,6 +21,27 @@
   font-size: 1.5em;
 }
 
+.text{
+  padding: 10px;
+}
+
+.text:hover{
+  border-style: solid;
+  border-width: 1px 1px 1px 1px;
+  border-color: #87CEFA;
+  border-radius: 5px;
+}
+
+.text > hr {
+  color: #87CEFA;
+  margin-top: 0px;
+  margin-bottom: 15px;
+}
+
+.text > i {
+  color: #87CEFA;
+}
+
 .articles-list {
   padding: 10px;
   height: inherit;
