--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -33,7 +33,7 @@
 			<li class="nav-item">
 				Coffee Drinker
 			</li>
-			<li class="nav-item" ui-sref="articles" ng-class="{itemIsActive: state.includes('articles')}">
+			<li class="nav-item" ng-click="goToPage('articles')" ng-class="{itemIsActive: state.includes('articles')}">
 				Scribble Maker
 			</li>
 			<li class="nav-item">
