--- a/public/modules/articles/css/articles.css
+++ b/public/modules/articles/css/articles.css
@@ -42,6 +42,13 @@
   color: #87CEFA;
 }
 
+.text > .time-tag {
+  color: #d6d6d6;
+  font-weight: normal;
+  font-size: 12px;
+  margin-left: 20px
+}
+
 .articles-list {
   padding: 10px;
   height: inherit;
@@ -66,4 +73,9 @@ span.article-date {
   font-size: 0.9em;
   font-weight: bold;
   color: #87CEFA;
+}
+
+.article-tag {
+  color: #87CEFA;
+  font-style: italic;
 }
