--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -14,6 +14,12 @@
 				<div class="text-center form-group">
 					<button type="submit" class="signIn-button bv-btn">Sign in</button>
 				</div>
+				<div class="checkbox form-group">
+			    <label>
+			      <input type="checkbox" data-ng-model="credentials.ifRemeber">
+			      Remeber me
+			    </label>
+			  </div>
 				<div data-ng-show="error" class="text-center text-danger">
 					<strong data-ng-bind="error"></strong>
 				</div>
