--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -1,6 +1,6 @@
 <div class="container site-header" data-ng-controller="HeaderController">
 	<div>
-		<img class="img-responsive text-center header-pic" src="modules/core/img/Head_Profile_2.JPG" />
+		<img class="img-responsive text-center header-pic" src="modules/core/img/Head_Profile_2.jpg" />
 	</div>
 	<div class="navbar-header">
 		<button class="navbar-toggle" type="button" data-ng-click="toggleCollapsibleMenu()">
