--- a/public/modules/articles/views/articles.client.view.html
+++ b/public/modules/articles/views/articles.client.view.html
@@ -39,11 +39,11 @@
 					0 people viewed&nbsp;&nbsp;
 				</div>
 				<div ng-if="user.isAdmin">
-					<div class="pull-left bv-font" ng-click="editArticle(book, article)">
+					<div class="pull-left bv-font text-btn" ng-click="editArticle(book, article)">
 						Edit
 					</div>
 					<span class="pull-left">&nbsp;|&nbsp;</span>
-					<div class="pull-left bv-font">
+					<div class="pull-left bv-font text-btn" ng-click="deleteArticle(article)">
 						Delete
 					</div>
 				</div>
