--- a/public/modules/blog/views/blog.client.view.html
+++ b/public/modules/blog/views/blog.client.view.html
@@ -30,7 +30,7 @@
 
 		<!-- Create book -->
 		&nbsp;
-		<button uib-popover-template="'myPopoverTemplate.html'" popover-is-open="isPopoverOpen" popover-title=" :D " popover-trigger="outsideClick" type="button" class="bv-btn blog-btn">Create a book</button>
+		<button uib-popover-template="'myPopoverTemplate.html'" popover-is-open="flags.isPopoverOpen" popover-title=" :D " popover-trigger="outsideClick" type="button" class="bv-btn blog-btn">Create a book</button>
 
 	 	<script type="text/ng-template" id="myPopoverTemplate.html">
 			 	<div class="form-group">
