--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -36,7 +36,7 @@
 			<li class="nav-item" ng-click="goToPage('articles')" ng-class="{itemIsActive: state.includes('articles')}">
 				Scribble Maker
 			</li>
-			<li class="nav-item">
+			<li class="nav-item" ng-click="goToPage('timekiller')" ng-class="{itemIsActive: state.includes('timekiller')}">
 				Time Killer
 			</li>
 			<!-- <li ui-route="/signup" ng-class="{active: true}" ng-click="test()">
