--- a/public/modules/timekiller/views/timekiller.client.view.html
+++ b/public/modules/timekiller/views/timekiller.client.view.html
@@ -1,3 +1,4 @@
-<section data-ng-controller="TimekillerController" id="game-container">
-
+<section data-ng-controller="TimekillerController" class="text-center">
+    <div id="first-game">
+    </div>
 </section>
