Sperate the new page for time killer

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -1,4 +1,4 @@
-<div class="container site-header" data-ng-controller="HeaderController">
+<div class="container site-header" data-ng-controller="HeaderController" ng-if="!ifHideHeader" ng-cloak>
 	<div>
 		<img class="img-responsive text-center header-pic" src="modules/core/img/Head_Profile_2.jpg" />
 	</div>
@@ -92,4 +92,5 @@
 			</li>
 		</ul> -->
 	</nav>
+</div>	
 </div>
