--- a/public/modules/core/views/footer.client.view.html
+++ b/public/modules/core/views/footer.client.view.html
@@ -1,5 +1,5 @@
 <div class="container" data-ng-controller="FooterController">
-  <div class="social-bar">
+  <div class="social-bar" ng-if="!ifHideFooter" ng-cloak>
     <a href="https://www.facebook.com/bv.jin.5" target="_blank" class="btn btn-social-icon btn-xs btn-facebook"><span class="fa fa-facebook"></span></a>
     <a href="https://twitter.com/BVhasBeUsed" target="_blank" class="btn btn-social-icon btn-xs btn-twitter"><span class="fa fa-twitter"></span></a>
     <a href="https://www.linkedin.com/in/sanchuan-jin-90881890?trk=hp-identity-name" target="_blank" class="btn btn-social-icon btn-xs btn-linkedin"><span class="fa fa-linkedin"></span></a>
